--- a/app/src/main/res/layout/custom_notification_view.xml
+++ b/app/src/main/res/layout/custom_notification_view.xml
@@ -4,18 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@android:style/TextAppearance.StatusBar.EventContent"
-    >
+    android:background="@drawable/app_background">
 
     <ImageView
         android:id="@+id/noti_albumart"
         android:layout_width="50dp"
-        android:layout_height="match_parent"
+        android:layout_height="70dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/ic_album_black_24dp"
         android:layout_marginRight="8dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp" />
+        android:layout_marginLeft="5dp"
+        android:padding="2dp" />
 
 
     <LinearLayout
@@ -34,7 +35,7 @@
             android:layout_height="22dp"
             android:text="This is a title of a song"
             android:layout_margin="2dp"
-            android:textColor="#1c1a1a"
+            android:textColor="#ffffff"
             android:textSize="15dp" />
 
         <TextView
@@ -43,7 +44,7 @@
             android:layout_height="15dp"
             android:text="This is artist name"
             android:layout_margin="2dp"
-            android:textColor="#4d4949"
+            android:textColor="#bdb9b9"
             android:textSize="12dp" />
     </LinearLayout>
 
@@ -70,7 +71,8 @@
             android:id="@+id/noti_playButton"
             android:src="@drawable/ic_play_arrow_black_24dp"
             android:background="@drawable/circular_play_button_background"
-            android:layout_margin="2dp" />
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp" />
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
