--- a/app/src/main/res/layout/fragment_song_list.xml
+++ b/app/src/main/res/layout/fragment_song_list.xml
@@ -2,15 +2,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/app_background"
-    tools:context="net.net16.suvankar.oasis_v12.SongListFragment">
+    tools:context="net.net16.suvankar.oasis_v12.MainActivity$SongListFragment">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/queueToolBar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/pinButton"
+            android:src="@drawable/ic_search_white_24dp"
+            android:background="@android:color/transparent"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:clickable="true"/>
+
+        </android.support.v7.widget.Toolbar>
 
     <TabHost
         android:id="@+id/tabHost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/queueToolBar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -84,4 +105,5 @@
             </FrameLayout>
         </LinearLayout>
     </TabHost>
+
 </RelativeLayout>
